4.5 -> 5.0:
    - jbj: perform fsync(2) before closing installed file.
    - jbj: default RPMCANONCOLOR to 3 everywhere but ia64 and mips*.
    - rse: remove now unused LIBDIR (--with-path-lib) from Autoconf and rename --with-path-usrlib to --with-path-lib
    - jbj: hardwire _GetPass() to avoid --addsign (*Getpass) segfault for now.
    - jbj: eliminate rpmrc.in file itself.
    - jbj: revert routines that were re-added for ABI compat after rpm-4.4.7.
    - jbj: eliminate the voo-doo asm arch identification.
    - jbj: eliminate recursive parser helpers.
    - jbj: expunge every occurence of Rcfiles.
    - jbj: eliminate rcfile reading everywhere.
    - jbj: eliminate last known internal usage of rpmrc files.
    - jbj: generate per-platform macros for major CPU-linux platforms.
    - mgh: Stop the python module from using rpmrc files
    - mgh: Change python configuration to allow for --with-python 2.x, 2.4 or 2.5. (no value will scan as it previously did)
    - jbj: parameterize upgrade/obsoletes tag. Panu's Big Mistake imho.
    - jbj: reset errno to 0 in rpmgiOpen to eliminate false ENOENT failure.
    - rse: do not build and install NLS data under po/ at all in case of --disable-nls
    - jbj: add new-fangled debugedit patch (#246404).
    - mgh: When the rpmfc_magic_path is not set or can't be expanded, act as if there is no magic file
    - mgh: add lib32 as a valid directory in rpmfc
    - mgh: change uses of @USRLIBRPM@ to %{_usrlibrpm} (needed for runtime relocation)
    - mgh: ensure the rpm python module is linked the same as the rest of RPM
    - rse: prune the 23MB large db/docs/ third-party subtree to no longer ship it in RPM distribution tarballs.
    - rse: allow installation paths to be overridden via "configure" options --with-path-xxx.
    - rse: re-generate lib/getdate.c with newer GNU bison 2.3
    - rse: detect if a script cannot be run because fork(2) failed.